[package]
name = "etcd_dynamic_state"
version = "0.2.10"
edition = "2021"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
description = "Etcd dynamic state library"
homepage = "https://github.com/insight-platform/etcd_dynamic_state"
repository = "https://github.com/insight-platform/etcd_dynamic_state"
readme = "README.md"
keywords = ["computer-vision", "video-processing"]
categories = ["algorithms", "data-structures", "computer-vision"]
license="Apache-2.0"
rust-version = "1.70"


[profile.release]
opt-level = 3
codegen-units = 1

[profile.bench]
opt-level = 3
codegen-units = 1

[dependencies]
log = "0.4"
anyhow = "1"
futures = "0.3"
etcd-client = "0.11"
async-trait = "0.1"
thiserror = "1"
glob = "0.3"
hashbrown = "0.14"
parking_lot = "0.12"
crc32fast = "1.3"
env_logger = "0.10"

[dependencies.tokio]
version = "1.35"
features = ["rt-multi-thread"]
